--- a/src/components/CardUser/style.css
+++ b/src/components/CardUser/style.css
@@ -5,7 +5,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
   cursor: pointer;
 }
 
